--- a/final_task/src/scss/styles.scss
+++ b/final_task/src/scss/styles.scss
@@ -22,6 +22,32 @@ input {
   }
 }
 
+input[type="checkbox"] {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid dodgerblue;
+  padding: 9px;
+  border-radius: 4px;
+  position: relative;
+  height: 20px;
+
+  &:checked {
+    background-color: dodgerblue;
+    color: white;
+
+    &:after {
+      content: '\2714';
+      font-size: 14px;
+      position: absolute;
+      top: 1px;
+      left: 3.5px;
+      color: white;
+    }
+  }
+}
+
+
+
 #header {
   color: white;
   font-size: 24px;
@@ -51,6 +77,7 @@ input {
     box-shadow: -1.5px 2px 6px lightgrey;
     background-color: transparent;
     border: none;
+    cursor: pointer;
   }
 
   &__input {
@@ -66,6 +93,7 @@ input {
 
 .sorting-dropdown {
   @include default-dropdown;
+  cursor: pointer;
 }
 
 .tasks {
@@ -77,13 +105,22 @@ input {
 
   &__clear {
     text-decoration: underline;
-    text-align: right;
     margin-top: 15px;
+    cursor: pointer;
+    width: fit-content;
+    margin-left: auto;
   }
 
   &__sort {
     display: flex;
     justify-content: space-between;
-    margin-top: 40px;
+    margin: 30px 0;
   }
+}
+
+.input-edit-mode {
+  @include default-input(lightgrey, 10px 0);
+  font-size: 16px;
+  font-weight: 500;
+  padding: 0 0 5px;
 }
